# ADOZ-Projekat-2025-26

Docs/: README.md
SW/rework/: CMakeLists.txt  IIR_low_pass_filters.h  adaptive_filter.c  adaptive_filter.h  conv.h  iir.c  low_pass_32th_order.h  low_pass_8th_order.h  main.c  wav.c
SW/rework/inc/: conv.h  direct_form_iir.h  fir.h  high_pass_129th_order.h  high_pass_4350Hz.h  high_pass_77th_order.h  iir.h  low_pass_4350Hz.h  notch.h  wav.h
SW/rework/src/: direct_form_iir.c  fir.c  iir.c  notch.c  wav.c  zadatak1.c  zadatak2.c  zadatak3.c  zadatak4.c
